--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: "A journey of a developer using .NET MAUI."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /blog
-google_analytics: 'UA-xxxx-X'
-disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+google_analytics: 'G-SKFNZHBTW2'
+disqus: 'codercampos'
+mailchimp-list: ''
 include: ["_pages"]
 permalink: /:title/
 
